# Liftlab_API

./: .gitignore  README.md  models.drawio  pyproject.toml  requirements.txt
api/: __init__.py
api/database/: utils.py
api/database/models/: BaseModel.py  Exercise.py  ExerciseMuscle.py  ExerciseVariation.py  Muscle.py  MuscleGroup.py  Tag.py  User.py  UserPreference.py  VariationType.py  Workout.py  WorkoutExercise.py  WorkoutExerciseSet.py  WorkoutLog.py  WorkoutLogExerciseSet.py  __init__.py
src/: __init__.py
src/database/: utils.py
src/database/models/: BaseModel.py  Exercise.py  ExerciseMuscle.py  ExerciseVariation.py  Muscle.py  MuscleGroup.py  Tag.py  User.py  UserPreference.py  VariationType.py  Workout.py  WorkoutExercise.py  WorkoutExerciseSet.py  WorkoutLog.py  WorkoutLogExerciseSet.py
src/models/: BaseModel.py  Exercise.py  ExerciseMuscle.py  ExerciseVariation.py  Muscle.py  MuscleGroup.py  Tag.py  User.py  UserPreferences.py  VariationType.py  Workout.py  WorkoutExercise.py  WorkoutExerciseSet.py  WorkoutLog.py  WorkoutLogExerciseSet.py
