[tool.poetry]
name = "liftlab-server"
version = "0.1.0"
description = ""
authors = ["Abhin Rustagi <hi@abhin.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
peewee = "^3.17.8"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
